--- a/_posts/thinking/self_development/2023-08-26-[특강]-꿈이-있는-사람은-늙지-않는다-(김미경).md
+++ b/_posts/thinking/self_development/2023-08-26-[특강]-꿈이-있는-사람은-늙지-않는다-(김미경).md
@@ -10,7 +10,7 @@ toc: true
 toc_sticky: true
 
 date: 2023-08-26
-last_modified_at: 2023-08-28
+last_modified_at: 2023-08-29
 ---
 
 
@@ -18,4 +18,72 @@ last_modified_at: 2023-08-28
 
 ## [특강] 꿈이 있는 사람은 늙지 않는다 / 김미경 강사 (8/26)
 
-+ 
++ 사업의 적응
+  - 나는 창업을 언제 했는지 아는가?
+
++ 직업
+  - 나를 먹여살릴 수 있을 때까지 제대로 해야된다
+  - 내가 투자해야 직업으로 먹고 살 수 있다
+  - "직업은 아무 문제가 없다. 내가 문제다"
+  - 직업을 직업답게 키워나가야 하는데 그것을 기다려주지 못하는 사람들이 많다
+  - 성공한 사람들의 특징
+    - 처음에는 다들 굶었다
+    - 끝까지 포기하지 않고 버텨왔다
+  - 네트워크 사업은 뭉쳐질 때까지 기다려야 한다
+  - 사업자는 아침마다 자신에게 물어야 한다
+
++ 암웨이 사업을 하는 이유?
+  - 내가 성공하기 위해
+  - 내가 행복지면 남도 행복해지는 형태를 만들어야 한다
+  - "내가 해온 10년간의 형태"가 리더십
+  - 리더십을 갖추는데 걸리는 시간
+    - 10년이 걸린다
+
++ 이 직업이 완성되는 시간
+  - 무엇을 성취하기 위해 준비하고 노력하는 시간이 필요하다
+  - 사람이 사람을 무서워하면 돈을 못번다
+  - 계속 내 비지니스를 키워나가지 않으면 사업을 유지/성공 할 수 없다
+
++ 꿈
+  - 하기 좋은 것 : 30%
+  - 하기 싫은 것 : 70%
+  - 50%을 뚫고 나가야 한다
+  - 암웨이는 하기 싫은 단계까지 가야 성공한다
+
++ 마케팅
+  - 돈은 신규가 아니고 기존 관리로 번다
+  - 한 명도 이탈하지 않고 열심히 뛰도록 노력한다
+
++ 새로운직업 - 강사
+  - 학원 경영 학생 200명 성공으로 인한 강의
+  - 8년 뒤 강사로 돈을 벌고 있는 나를 보게 됨
+  - 모든 것이 과거와 연관이 있다
+  - 지금 안되는 이유는 과거에 있다
+  - 오늘은 과거에 보내는 신호
+
++ 제일 중요한 것 : 버팀
+  - 이 세상에서 제일 무겁고 제일 말 안듣느게 '나'다
+  - '나'를 들어 올리면 성공한다
+
++ 인생에 '부러짐'
+  - 사람들은 부러짐(실패)을 경험하면 그 상황만 바라본다
+  - 하지만 그 부러진 긍정의 방향성을 살펴봐야한다
+  - 방향을 바꾼 그 방향을 살펴보면 완전히 다른 것을 만나게 된다
+  - 그 부분을 해석해야 한다
+  - 암웨이가 힘들다면, 그 방향성을 봐라
+
++ 숨
+  - 힘들고 절망에 빠져도 '숨'만 쉬어도 희망이 생긴다
+
++ 나를 일하게 하는 힘
+  - 내가 하고 있는 일에 형태가 잡히도록 노력하라
+
++ 하루 실력
+  - 하루가 미래를 바뀐다
+  - 과거는 현재와 미래가 떨어진 것이 아니다
+  - 오늘이 바뀌면 과거까지 바뀔수 있다
+  - 가장 힘들었던 날이 가장 소중한 날이 될 수 있다
+
++ 세상에 1월 1일은 없다
+  - 시간은 단 한 번도 흐른적이 었다 - 시계가 흐를뿐
+  - 결국 인간이 흐르는 것
