--- a/_posts/winners/biz_lecture/2023-08/2023-08-28-인생프로젝트-(류지민 리더).md
+++ b/_posts/winners/biz_lecture/2023-08/2023-08-28-인생프로젝트-(류지민 리더).md
@@ -15,12 +15,23 @@ last_modified_at: 2023-08-29
 audio_file : assets/amway/audio/2023-08-28-인생프로젝트-(류지민 리더).mp3
 ---
 
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/kQdj4kcEryM?si=1uK3NyfDsxOdJ9zn" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
 <audio src="{{ page.audio_file | relative_url }}" controls loop></audio>
 
 
 ## 인생 프로젝트 / 류지민 리더 (8/28)
 ### 부제 : 마트 체인지의 비밀
 
-+ 
++ 가난
+  - 옛날 : 전쟁과 배고픔
+  - 현재 : 내 인생을 제대로 펼치지 못하는 가난
 
-+ 
++ 행복
+  - 이제 행복의 기준이 달라짐
+
++ 존리
+  - 온 가족이 경제적 독립이 필요하다
+  - 부모가 가난하고 자식이 부자이면, 부모를 찾지 않는다
+  - 부모가 부자고 자식이 가난하면 다 뺏긴다
