--- a/_posts/winners/biz_lecture/2024-01/2024-01-01-게스트 스피치-(홍진희 스폰서님).md
+++ b/_posts/winners/biz_lecture/2024-01/2024-01-01-게스트 스피치-(홍진희 스폰서님).md
@@ -14,7 +14,7 @@ last_modified_at: 2024-01-08
 ---
 
 
-<iframe width="560" height="315" src="https://youtu.be/aBM9cm7BSg8?si=kcpJ9wlSl3CJN-0z" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/aBM9cm7BSg8?si=wZ2CfufnGZqGm3KH" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 
 ## 게스트 스피치 / 홍진희 스폰서님 (1/1)
