--- a/_posts/winners/biz_lecture/2024-01/2024-01-04-비전과 가치-(장희선 DIA).md
+++ b/_posts/winners/biz_lecture/2024-01/2024-01-04-비전과 가치-(장희선 DIA).md
@@ -14,7 +14,7 @@ last_modified_at: 2024-01-09
 ---
 
 
-<iframe width="560" height="315" src="https://youtu.be/9njYGGJotAU?si=VbBhiz3r7-AyreIm" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/9njYGGJotAU?si=4O6d4CyAngI5-a0U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 
 ## 비전과 가치 / 장희선 DIA (1/4)
