--- a/_posts/winners/biz_lecture/2024-01/2024-01-05-맨디의 사업설명-(김윤정 리더).md
+++ b/_posts/winners/biz_lecture/2024-01/2024-01-05-맨디의 사업설명-(김윤정 리더).md
@@ -14,7 +14,7 @@ last_modified_at: 2024-01-09
 ---
 
 
-<iframe width="560" height="315" src="https://youtu.be/Yb65L_JsnDY?si=s1jpDCHrmH2APA0L" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/Yb65L_JsnDY?si=MPwEfL3J1ZQvmX9h" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 
 ## 맨디의 사업설명 / 김윤정 리더 (1/5)
