--- a/_posts/winners/biz_lecture/2024-01/2024-01-06-행복한 삶의 방식, 암웨이-(홍다영 리더).md
+++ b/_posts/winners/biz_lecture/2024-01/2024-01-06-행복한 삶의 방식, 암웨이-(홍다영 리더).md
@@ -14,7 +14,7 @@ last_modified_at: 2024-01-09
 ---
 
 
-<iframe width="560" height="315" src="https://youtu.be/O1bFH3zB5AY?si=UD_eadSRd2r867cF" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/O1bFH3zB5AY?si=hL3n_SSJOMsjOI-8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 
 ## 행복한 삶의 방식, 암웨이 / 홍다영 리더 (1/6)
