--- a/_posts/winners/biz_lecture/2024-01/2024-01-08-선택을 정답으로 만드는 인생-(김남득 리더).md
+++ b/_posts/winners/biz_lecture/2024-01/2024-01-08-선택을 정답으로 만드는 인생-(김남득 리더).md
@@ -14,7 +14,7 @@ last_modified_at: 2024-01-09
 ---
 
 
-<iframe width="560" height="315" src="https://youtu.be/4g1sxXaohbg?si=DPlTIaJPQn0SRztF" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/4g1sxXaohbg?si=h9c5uIoUd1AVLMTq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 
 ## 선택을 정답으로 만드는 인생 / 김남득 리더 (1/8)
