--- a/_posts/winners/biz_lecture/2024-01/2024-01-03-OM청주-(김윤화 리더).md
+++ b/_posts/winners/biz_lecture/2024-01/2024-01-03-OM청주-(김윤화 리더).md
@@ -14,7 +14,7 @@ last_modified_at: 2024-01-09
 ---
 
 
-<iframe width="560" height="315" src="https://youtu.be/MZNwT9Wsk4c?si=nrwRe-SY6Ni-zvPp" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/MZNwT9Wsk4c?si=D5O6TqzCgzTJHCHD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 
 ## 타그룹 OM청주 / 김윤화 리더 (1/3)
